2005-11-16  Kim F. Storm  <storm@cua.dk>

	* progmodes/gud.el (gud-menu-map): Let [stop] stop program rather
	than kill it.
	(gud-tool-bar-map): Likewise.  Move cont/until/finish buttons
	to a more useful/logical place.

2005-11-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Make visibility of stop and
	go buttons complementary.

2005-11-15  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper-utils (viper-non-word-characters-reformed-vi): Quote `-' in
	string.

	* viper.el (viper-emacs-state-mode-list): Ensure that
	rcirc-mode buffers come up in Emacs state.

	* ediff-util (ediff-make-temp-file): Use proper file-name-handler
	operation.

2005-11-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.el (term-termcap-format): Fix typos.
	(term-down): Fix the negative argument case.

2005-11-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el: Remove face-alias left over from change on
	2005-08-15.
	(gdb-ann3): New command gud-go.
	(menu): Accomodate gdb-mi.el.
	(gdb-assembler-custom): Make buffer of selected window current
	so that set-window-point works.

	* progmodes/gud.el (gud-menu-map, gud-tool-bar-map): Re-define
	buttons and include new ones.

2005-11-16  Kim F. Storm  <storm@cua.dk>

	* progmodes/gud.el (gud-tool-bar-item-visible-no-fringe): New
	function.
	(gud-menu-map): Use it.

2005-11-14  Luc Teirlinck  <teirllm@auburn.edu>

	* jka-cmpr-hook.el (auto-compression-mode): Enable it in a way
	that works correctly for Custom and that does not override a user
	who disables it.

	* help-mode.el (help-make-xrefs, help-xref-on-pp)
	(help-xref-interned, help-follow): Make hyperlinks for variables
	that are unbound, but have a non-nil variable-documentation property.

	* emacs-lisp/derived.el (define-derived-mode): Remove defvar for
	mode hook.  (It conflicted with defcustoms for some mode hooks.)
	Use the `variable-documentation' property to give the mode hook a
	docstring and expand that docstring.
